@@ -1,3 +1,9 @@
+2007-07-31  Mike Kestner  <mkestner@novell.com>
+
+	* generator/Ctor.cs : Validate before generating and adjust protection
+	on a couple private methods.
+	* generator/Parameters.cs : remove unused var to kill warning.
+
 2007-07-30  Mike Kestner  <mkestner@novell.com>
 
 	* generator/MethodBody.cs : refactor finish logic into parameter.
